--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ python-dotenv==1.0.0
 requests==2.31.0
 sqlalchemy==2.0.21
 gunicorn==21.2.0
-openai==1.3.8
+openai>=1.6.1
 langchain==0.0.350
 langchain-openai==0.0.2
 pydantic==2.5.0 
